# gen_ai_learning

./: README.md  pyproject.toml
gen_ai/: lunar_landing.ipynb
