[tool.poetry]
name = "gen-ai"
version = "0.1.0"
description = ""
authors = ["Sabarish <studysabarish@gmail.com>"]
readme = "README.md"
packages = [{include = "gen_ai"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
