[tool.poetry]
name = "gen-ai"
version = "0.1.0"
description = ""
authors = ["Sabarish <studysabarish@gmail.com>"]
readme = "README.md"
packages = [{include = "gen_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}
torch = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
